get POC working with xpath auto-detect